name:           bitcoin-script-engine
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
homepage:       https://en.bitcoin.it/wiki/Script
category:       Language
author:         Alexander Bernauer <alex@copton.net>
maintainer:     Alexander Bernauer <alex@copton.net>
license:        LGPL-3
license-file:   LICENSE
data-files:     src
description:    An inofficial implementation of the Bitcoin Script engine

library
  build-depends:   base >= 4
  ghc-options:     -Wall
  hs-source-dirs:  src
  build-depends:
    bytestring >= 0.9.1.10,
    parsec >= 3.1.1,
    binary >= 0.5.0.2
  exposed-modules:
    Language.Bitcoin.Assembler
    Language.Bitcoin.Disassembler
    Language.Bitcoin.Interpreter
    Language.Bitcoin.Parser
    Language.Bitcoin.Printer
    Language.Bitcoin.Types
    Language.Bitcoin.Utils

executable bitcoin-script
  hs-source-dirs:  src
  main-is:         Main.hs
  other-modules:
    Language.Bitcoin.Main
    Language.Bitcoin.Options
  build-depends:   base >= 4
  ghc-options:     -Wall

executable Test
  hs-source-dirs: src, test
  main-is: Test.hs
  build-depends:
    HUnit >= 1.2.2.1
  other-modules:
    Language.Bitcoin.Test.Interpreter
    Language.Bitcoin.Test.Parser
    Language.Bitcoin.Test.Preprocessor
    Language.Bitcoin.Test.Utils
