-- vim: set expandtab:
name:           bitcoin-script-tools
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
homepage:       https://en.bitcoin.it/wiki/Script
category:       Language
author:         Alexander Bernauer <alex@copton.net>
maintainer:     Alexander Bernauer <alex@copton.net>
license:        GPL-3
license-file:   LICENSE
description:    An inofficial implementation of Bitcoin Script tools

data-files:
  README,
  LICENSE

library
  ghc-options:     -Wall
  hs-source-dirs:  src
  build-depends:
    base == 4.3.*,
    bytestring == 0.9.*,
    parsec == 3.1.*,
    binary == 0.5.*
  exposed-modules:
    Language.Bitcoin.Assembler
    Language.Bitcoin.Disassembler
    Language.Bitcoin.Interpreter
    Language.Bitcoin.Parser
    Language.Bitcoin.Printer
    Language.Bitcoin.Text
    Language.Bitcoin.Types
    Language.Bitcoin.Utils

executable bitcoin-script
  hs-source-dirs:  src
  main-is:         Main.hs
  other-modules:
    Language.Bitcoin.Main
    Language.Bitcoin.Options
  build-depends:
    base == 4.3.*
  ghc-options:     -Wall

executable Test
  hs-source-dirs: src, test
  main-is: Test.hs
  build-depends:
    base == 4.3.*,
    HUnit == 1.2.*
  other-modules:
    Language.Bitcoin.Test.Interpreter
    Language.Bitcoin.Test.Parser
    Language.Bitcoin.Test.Preprocessor
    Language.Bitcoin.Test.Utils
